--- a/pousada_app/templates/reservas/nova_reserva.html
+++ b/pousada_app/templates/reservas/nova_reserva.html
@@ -1,12 +1,12 @@
 {% extends 'base/base.html' %}
 {% load static %}
 
-{% block title %}Nova Reserva - Pousada Pajeu{% endblock %}
+{% block title %}Nova Reserva - Pousada Pajéu{% endblock %}
 
 {% block content %}
 <!-- Banner da Página -->
 <section class="banner">
-    <img src="{% static 'img/banner-reserva.jpg' %}" alt="Reserva Pousada Pajeu" class="banner-img">
+    <img src="{% static 'img/banner-reserva.jpg' %}" alt="Reserva Pousada Pajéu" class="banner-img">
     <div class="banner-content">
         <div class="container">
             <div class="row">
