--- a/pousada_app/templates/website/contato.html
+++ b/pousada_app/templates/website/contato.html
@@ -1,12 +1,12 @@
 {% extends 'base/base.html' %}
 {% load static %}
 
-{% block title %}Contato - Pousada Pajeu{% endblock %}
+{% block title %}Contato - Pousada Pajéu{% endblock %}
 
 {% block content %}
 <!-- Banner da Página -->
 <section class="banner">
-    <img src="{% static 'img/banner-contato.jpg' %}" alt="Contato Pousada Pajeu" class="banner-img">
+    <img src="{% static 'img/banner-contato.jpg' %}" alt="Contato Pousada Pajéu" class="banner-img">
     <div class="banner-content">
         <div class="container">
             <div class="row">
@@ -80,7 +80,7 @@
                             </div>
                             <div class="flex-grow-1 ms-3">
                                 <h5>Horário de Funcionamento</h5>
-                                <p class="mb-0">Recepção 24 horas<br>Check-in: a partir das 14h<br>Check-out: até as 12h</p>
+                                <p class="mb-0">Recepção 24 horas<br>Check-in: horário flexível<br>Check-out: 24h após o check-in</p>
                             </div>
                         </div>
                         
@@ -269,7 +269,7 @@
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionFAQ">
                             <div class="accordion-body">
-                                O check-in pode ser realizado a partir das 14h e o check-out até as 12h. Caso precise de horários diferenciados, entre em contato conosco com antecedência para verificarmos a disponibilidade. Para hóspedes que frequentam as feiras da madrugada, temos flexibilidade nos horários.
+                                O check-in pode ser realizado em qualquer horário e o check-out acontece 24 horas após sua entrada. Por exemplo, se você fizer check-in às 20h, seu check-out será às 20h do dia seguinte. Esse sistema flexível é especialmente conveniente para quem frequenta as feiras da madrugada.
                             </div>
                         </div>
                     </div>
@@ -353,7 +353,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <p>A Pousada Pajeu está comprometida com a proteção de sua privacidade. Esta política de privacidade descreve como coletamos, usamos e protegemos suas informações pessoais.</p>
+                <p>A Pousada Pajéu está comprometida com a proteção de sua privacidade. Esta política de privacidade descreve como coletamos, usamos e protegemos suas informações pessoais.</p>
                 
                 <h5>1. Coleta de Informações</h5>
                 <p>Coletamos informações como nome, endereço, e-mail, telefone e dados de pagamento para processar reservas e melhorar nossos serviços.</p>
