FIX CALENDÁRIOS E FINANCEIRO

--- a/financeiro/templates/financeiro/base_financeiro.html
+++ b/financeiro/templates/financeiro/base_financeiro.html
@@ -136,6 +136,11 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'reservas:check_in' %}">
+                        <i class="fas fa-user-check"></i> Check-in de Hóspedes
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'website:home' %}">
                         <i class="fas fa-globe"></i> Voltar para o Site
                     </a>
